--- a/hw/hw1.ipynb
+++ b/hw/hw1.ipynb
@@ -230,7 +230,7 @@
         "**Вычисление площади пересечения:**   \n",
         "   Общая площадь квадрата:\n",
         "   $$\n",
-        "   S_{\\text{квадрат}} = 24 \\times 24 = 576 \\ \\text{часов}^2\n",
+        "   S_{\\text{квадрат}} = 24 \\times 24 = 576 \\\n",
         "   $$\n",
         "   \n",
         "   Необходимо найти площадь области, где выполняются оба условия $X - 2 \\leq Y \\leq X + 1$.\n",
@@ -241,17 +241,17 @@
         "     \n",
         "     - Первый треугольник с катетами по 22 часа:\n",
         "       $$\n",
-        "       S_1 = \\frac{1}{2} \\times 22 \\times 22 = 242 \\ \\text{часов}^2\n",
+        "       S_1 = \\frac{1}{2} \\times 22 \\times 22 = 242 \\\n",
         "       $$\n",
         "     \n",
         "     - Второй треугольник с катетами по 23 часа:\n",
         "       $$\n",
-        "       S_2 = \\frac{1}{2} \\times 23 \\times 23 = 264.5 \\ \\text{часов}^2\n",
+        "       S_2 = \\frac{1}{2} \\times 23 \\times 23 = 264.5 \\\n",
         "       $$\n",
         "   \n",
         "   - **Площадь пересечения:**\n",
         "     $$\n",
-        "     S_{\\text{пересечение}} = S_{\\text{квадрат}} - (S_1 + S_2) = 576 - (242 + 264.5) = 69.5 \\ \\text{часов}^2\n",
+        "     S_{\\text{пересечение}} = S_{\\text{квадрат}} - (S_1 + S_2) = 576 - (242 + 264.5) = 69.5 \\\n",
         "     $$\n",
         "   \n",
         "   Вероятность того, что одному из пароходов придется ожидать освобождения причала, равна отношению площади пересечения к общей площади квадрата:\n",
@@ -365,6 +365,7 @@
         "- **Менее трех** попаданий в Часть 3.\n",
         "\n",
         "При $m=3$:\n",
+        "$$\n",
         "P(\\overline{A} \\mid m=3) = P(\\text{одно попадание в Часть 2 и два в Часть 3})\n",
         "$$\n",
         "$$\n",
@@ -697,25 +698,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Имеются два одинаковых тетраэдра с числами 1, 2, 3, 4 на гранях. Подкидываем оба и фиксируем выпавшие числа $\\xi_1$ и $\\xi_2$. Задаем следующие случайные величины:\n",
-        "$$\n",
-        "\\phi_1 = \\xi_1 + \\xi_2\n",
-        "$$\n",
-        "\n",
-        "$$\n",
-        "\\phi_2 = \\begin{cases}\n",
-        "1, & \\text{если } \\xi_1 \\text{ делится на } \\xi_2 \\text{ или } \\xi_2 \\text{ делится на } \\xi_1, \\\\\n",
-        "0, & \\text{иначе}.\n",
-        "\\end{cases}\n",
-        "$$\n",
-        "\n",
         "#### (a) Составление таблицы совместного распределения $\\phi_1$ и $\\phi_2$\n",
         "\n",
-        "**Шаг 1: Перечисление всех возможных исходов**\n",
+        "**Перечисление всех возможных исходов**\n",
         "\n",
         "Всего возможных пар $(\\xi_1, \\xi_2)$ — $4 \\times 4 = 16$. Каждая пара имеет вероятность $\\dfrac{1}{16}$.\n",
         "\n",
-        "**Шаг 2: Вычисление $\\phi_1$ и $\\phi_2$ для каждого исхода**\n",
+        "**Вычисление $\\phi_1$ и $\\phi_2$ для каждого исхода**\n",
         "\n",
         "| $\\xi_1$ | $\\xi_2$ | $\\phi_1 = \\xi_1 + \\xi_2$ | $\\phi_2$ |\n",
         "|------------|------------|------------------------------|--------------|\n",
@@ -736,7 +725,7 @@
         "| 4          | 3          | 7                            | 0            |\n",
         "| 4          | 4          | 8                            | 1            |\n",
         "\n",
-        "**Шаг 3: Построение таблицы совместного распределения**\n",
+        "**Построение таблицы совместного распределения**\n",
         "\n",
         "| $\\phi_1$ | $\\phi_2 = 0$ | $\\phi_2 = 1$ |\n",
         "|--------------|-------------------|-------------------|\n",
@@ -979,10 +968,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Ответ:**\n",
-        "\n",
-        "### 4. Задача с тригонометрическими случайными величинами\n",
-        "\n",
         "Пусть $\\xi \\sim U_{-\\pi, \\pi}$ и определены случайные величины:\n",
         "$$\n",
         "\\eta_1 = \\cos \\xi, \\quad \\eta_2 = \\sin \\xi.\n",
@@ -1093,9 +1078,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 5. Плотность распределения суммы двух независимых случайных величин\n",
-        "\n",
-        "**Дано:**\n",
         "- Случайная величина $\\xi \\sim \\text{Exp}_2$ — экспоненциальное распределение с параметром $\\lambda = 2$.\n",
         "  \n",
         "  Плотность распределения:\n",
@@ -1118,24 +1100,23 @@
         "  \\end{cases}\n",
         "  $$\n",
         "\n",
-        "**Необходимо:**\n",
-        "Найти плотность распределения суммы $Z = \\xi + \\eta$.\n",
+        "Плотность распределения суммы $Z = \\xi + \\eta$.\n",
         "\n",
-        "### Шаг 1: Понимание области определения\n",
+        "### Область определения\n",
         "\n",
         "- $\\xi \\geq 0$\n",
         "- $\\eta \\in [0, 1]$\n",
         "  \n",
         "Таким образом, сумма $Z = \\xi + \\eta$ принимает значения в диапазоне $[0, \\infty)$.\n",
         "\n",
-        "### Шаг 2: Формула свертки для плотности суммы независимых случайных величин\n",
+        "### Формула свертки для плотности суммы независимых случайных величин\n",
         "\n",
         "Поскольку $\\xi$ и $\\eta$ независимы, плотность распределения суммы $Z$ равна свертке их плотностей:\n",
         "$$\n",
         "f_Z(z) = \\int_{-\\infty}^{+\\infty} f_\\xi(z - y) f_\\eta(y) \\, dy\n",
         "$$\n",
         "\n",
-        "### Шаг 3: Определение пределов интегрирования\n",
+        "### Определение пределов интегрирования\n",
         "\n",
         "Поскольку $\\eta \\in [0, 1]$ и $\\xi \\geq 0$, интеграл можно упростить:\n",
         "$$\n",
@@ -1150,7 +1131,7 @@
         "- **Для $z \\geq 1$:**\n",
         "  $y$ изменяется от $z - 1$ до $1$, так как $\\eta \\leq 1$.\n",
         "\n",
-        "### Шаг 4: Вычисление интеграла для различных диапазонов $z$\n",
+        "### Вычисление интеграла для различных диапазонов $z$\n",
         "\n",
         "#### Случай 1: $0 \\leq z < 1$\n",
         "\n",
@@ -1164,23 +1145,13 @@
         "f_Z(z) = \\int_{z-1}^{1} 2 e^{-2(z - y)} \\, dy = 2 e^{-2z} \\int_{z-1}^{1} e^{2y} \\, dy = 2 e^{-2z} \\left[ \\frac{1}{2} e^{2y} \\right]_{z-1}^{1} = e^{-2z} (e^{2} - e^{2(z - 1)}) = e^{-2(z - 1)} - e^{-2z}\n",
         "$$\n",
         "\n",
-        "### Шаг 5: Итоговая форма плотности распределения $Z$\n",
+        "### Итоговая форма плотности распределения $Z$\n",
         "\n",
         "$$\n",
         "f_Z(z) =\n",
         "\\begin{cases}\n",
         "1 - e^{-2z}, & 0 \\leq z < 1, \\\\\n",
         "e^{-2(z - 1)} (1 - e^{-2}), & z \\geq 1.\n",
-        "\\end{cases}\n",
-        "$$\n",
-        "\n",
-        "**Упрощенно:**\n",
-        "\n",
-        "$$\n",
-        "f_Z(z) =\n",
-        "\\begin{cases}\n",
-        "1 - e^{-2z}, & 0 \\leq z < 1, \\\\\n",
-        "(1 - e^{-2}) e^{-2(z - 1)}, & z \\geq 1.\n",
         "\\end{cases}\n",
         "$$\n",
         "\n",
@@ -1208,16 +1179,6 @@
         "### Итоговый результат\n",
         "\n",
         "Плотность распределения суммы двух независимых случайных величин $\\xi \\sim \\text{Exp}_2$ и $\\eta \\sim U_{0,1}$ равна:\n",
-        "\n",
-        "$$\n",
-        "f_Z(z) =\n",
-        "\\begin{cases}\n",
-        "1 - e^{-2z}, & 0 \\leq z < 1, \\\\\n",
-        "(1 - e^{-2}) e^{-2(z - 1)}, & z \\geq 1.\n",
-        "\\end{cases}\n",
-        "$$\n",
-        "\n",
-        "**График плотности распределения $f_Z(z)$:**\n",
         "\n",
         "$$\n",
         "f_Z(z) =\n",
